# UrbanAI

./: .clineignore  .clinerules  .env.example  .env.production.example  .gitignore  CLAUDE.md  CONCURRENT-WORKFLOW.md  CONTRIBUTING.md  MICROSOFT-OAUTH-SETUP.md  README.md  UrbanAI.sln  Week4_Demo_Email_Invitation.md  azure-pipelines.yml  azure.yaml  chatgpt_urbanai_conversation.md  cline_mcp_settings.json  coverlet.runsettings  crawl_chatgpt.py  crawl_chatgpt_clean.py  implementation_plan.md  integration-coverage.runsettings  package-lock.json  package.json  server.js  simple-test.py  test-all.ps1  test-all.sh  transcript-wMSIE8SF0xQ.json  transcript-xOO8Wt_i72s.json  validate-footer.js  validate-landing-page.js  validate-static-site.html  validate-vendor-badges.py
.azuredevops/: azure-pipelines.yml
.claude/: PORT_COMPLIANCE_SYSTEM.md  README.md  VISUAL_VALIDATION_SYSTEM.md  mcp-config.json  settings.local.json
.clinerules/: rules.md
.github/: actions_latest_run.json
.investigation/: step1_survey.txt
CoverageReport/: Summary.txt  UrbanAI.API_AuthController.html  UrbanAI.API_IssuesController.html  UrbanAI.API_Program.html  UrbanAI.Application_AuthRequestDto.html  UrbanAI.Application_AuthResponseDto.html  UrbanAI.Application_CreateIssueRequestDto.html  UrbanAI.Application_CreateIssueResponseDto.html  UrbanAI.Application_IssueDto.html  UrbanAI.Application_IssueService.2.html  UrbanAI.Application_IssueService.html  UrbanAI.Application_RegulationService.html  UrbanAI.Application_UpdateIssueRequestDto.html  UrbanAI.Application_UserService.html  UrbanAI.Domain_BaseEntity.html  UrbanAI.Domain_ExternalLogin.html  UrbanAI.Domain_Issue.html  UrbanAI.Domain_Regulation.html  UrbanAI.Domain_User.html  UrbanAI.Infrastructure_AddIssueAndRegulationEntities.html  UrbanAI.Infrastructure_ApplicationDbContext.html  UrbanAI.Infrastructure_ApplicationDbContextFactory.html  UrbanAI.Infrastructure_ApplicationDbContextModelSnapshot.html  UrbanAI.Infrastructure_InitialCreate.html  UrbanAI.Infrastructure_InitialPostgreSqlMigrationV2.html  UrbanAI.Infrastructure_IssueConfiguration.html  UrbanAI.Infrastructure_IssueRepository.html  UrbanAI.Infrastructure_MongoDbContext.html  UrbanAI.Infrastructure_MongoDbSettings.html  UrbanAI.Infrastructure_RegulationDocument.html  UrbanAI.Infrastructure_RegulationRepository.html  index.html  main.js
UrbanAI.git/: config  packed-refs
coverage-report/: Summary.txt
coverage_reports/: application_coverage.cobertura.xml  total_coverage.cobertura.xml
docs/: APITestingBestPractices.md  TestCoverageReport.md  Week4_Discussion_Points.md  Week4_Discussion_Points_PDF_Version.md  Week4_Performance_Review_Summary.md  architecture-overview.md  azure-functions-migration.md  cline-custom-instructions.md  (+8 more)
mcp_servers/wiki/: README.md  create_home_debug.py  create_page.py  debug_wiki.py  delete_page.py  explore_wiki.py  mcp_server_config.json  pyproject.toml  quick_update.py  register_server.py  scrape_chatgpt.py  test_wiki_connection.py  update_wiki.py  upload_all_pages.py  use_mcp_server.py
mcp_servers/wiki/content/: api.md  architecture.md  component-diagram.md  home.md  sequence-diagrams.md  ux-design.md
mcp_servers/wiki/src/wiki_mcp/: client.py  models.py  server.py  templates.py  utils.py
mcp_servers/wiki/tests/unit/: __init__.py  test_client.py  test_models.py  test_server.py  test_templates.py  test_utils.py  test_validators.py
(+519 files in other folders)
